app/assets/css/main.css
@import "tailwindcss";
@import "@nuxt/ui";

body {
  background-color: white
}

input::placeholder {
  color: var(--color-neutral-400)
}

/* scrollbar width */
::-webkit-scrollbar {
  width: 8px;
}

/* remove track background */
::-webkit-scrollbar-track {
  background: transparent;
}

/* scrollbar thumb */
::-webkit-scrollbar-thumb {
  background: #00c950;
  border-radius: 4px;
}

@media (width < 40rem) {
  /* scrollbar width */
  ::-webkit-scrollbar {
    width: 4px;
  }
}

